user and event documentation
