# cmd/server/handler/event.go
@@ -16,6 +16,15 @@ func NewEventHandler(service *event.EventService) *EventHandler {
 	return &EventHandler{service: *service}
 }
 
+// event godoc
+// @Summary Create event
+// @Tags event
+// @Accept json
+// @Produce json
+// @Param body body dto.CreateEventDto true "CreateEventDto"
+// @Success 201 {object} domain.Event
+// @Failure 500 {object} error
+// @Router /event [post]
 func (h *EventHandler) HandlerCreate() gin.HandlerFunc {
 	return func(ctx *gin.Context) {
 		var tempEvent dto.CreateEventDto
@@ -34,6 +43,13 @@ func (h *EventHandler) HandlerCreate() gin.HandlerFunc {
 	}
 }
 
+// event godoc
+// @Summary Get all events
+// @Tags event
+// @Produce json
+// @Success 200 {array} domain.Event
+// @Failure 500 {object} error
+// @Router /event [get]
 func (h *EventHandler) HandlerGetAll() gin.HandlerFunc {
 	return func(ctx *gin.Context) {
 		eventList, err := h.service.GetAllEvents()
@@ -46,6 +62,14 @@ func (h *EventHandler) HandlerGetAll() gin.HandlerFunc {
 	}
 }
 
+// event godoc
+// @Summary Get event by id
+// @Tags event
+// @Produce json
+// @Param id path int true "id"
+// @Success 200 {object} domain.Event
+// @Failure 500 {object} error
+// @Router /event/{id} [get]
 func (h *EventHandler) HandlerGetById() gin.HandlerFunc {
 	return func(ctx *gin.Context) {
 		id := ctx.Param("id")
@@ -65,6 +89,14 @@ func (h *EventHandler) HandlerGetById() gin.HandlerFunc {
 	}
 }
 
+// event godoc
+// @Summary Get event by session id
+// @Tags event
+// @Produce json
+// @Param id path int true "session_id"
+// @Success 200 {array} domain.Event
+// @Failure 500 {object} error
+// @Router /event/session/{id} [get]
 func (h *EventHandler) HandlerGetBySessionId() gin.HandlerFunc {
 	return func(ctx *gin.Context) {
 		id := ctx.Param("id")
@@ -84,6 +116,14 @@ func (h *EventHandler) HandlerGetBySessionId() gin.HandlerFunc {
 	}
 }
 
+// event godoc
+// @Summary Get event by character id
+// @Tags event
+// @Produce json
+// @Param id path int true "character_id"
+// @Success 200 {array} domain.Event
+// @Failure 500 {object} error
+// @Router /event/character/{id} [get]
 func (h *EventHandler) HandlerGetByCharacterId() gin.HandlerFunc {
 	return func(ctx *gin.Context) {
 		id := ctx.Param("id")
@@ -103,6 +143,16 @@ func (h *EventHandler) HandlerGetByCharacterId() gin.HandlerFunc {
 	}
 }
 
+// event godoc
+// @Summary Update event
+// @Tags event
+// @Accept json
+// @Produce json
+// @Param id path int true "id"
+// @Param body body dto.CreateEventDto true "CreateEventDto"
+// @Success 200 {object} domain.Event
+// @Failure 500 {object} error
+// @Router /event/{id} [put]
 func (h *EventHandler) HandlerUpdate() gin.HandlerFunc {
 	return func(ctx *gin.Context) {
 		id := ctx.Param("id")
@@ -127,6 +177,14 @@ func (h *EventHandler) HandlerUpdate() gin.HandlerFunc {
 	}
 }
 
+// event godoc
+// @Summary Delete event
+// @Tags event
+// @Produce json
+// @Param id path int true "id"
+// @Success 200 {object} string
+// @Failure 500 {object} error
+// @Router /event/{id} [delete]
 func (h *EventHandler) HandlerDelete() gin.HandlerFunc {
 	return func(ctx *gin.Context) {
 		id := ctx.Param("id")
